deployment/01_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: sdaschner/hello-world:1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 40
          readinessProbe:
            httpGet:
              path: /hello-world/resources/hello
              port: 9080
              scheme: HTTP
            initialDelaySeconds: 60
      restartPolicy: Always
