deployment/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    - protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: hello-world
  type: NodePort
